--- a/src/pages/stock/Stock.css
+++ b/src/pages/stock/Stock.css
@@ -5,9 +5,23 @@
 .stock-container {
     background-color: #026773;
     min-height: 100vh;
+    position:relative
 }
 
+.stock .add-icon{
+    width: 60px;
+    transition: 0.2s ease-in-out;
+    position: absolute;
+    left: 120px;
+    top: 9px
+}
+.stock-container .add-icon:hover{
+    cursor: pointer;
+    transform: scale(1.2 )
+}
 .stock{
     max-width: 600px;
     margin: 0 auto;
+
 }
+
