--- a/src/pages/stock/Stock.css
+++ b/src/pages/stock/Stock.css
@@ -25,3 +25,13 @@
 
 }
 
+ /* ProductsList component  */
+
+ .title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 8px;
+    font-size: 20px;
+    color: #f3f4e6
+}
