--- a/src/pages/shoppingList/Modal.css
+++ b/src/pages/shoppingList/Modal.css
@@ -26,13 +26,13 @@
     font-size: 21px;
 }
 
-.products-in-modal {
+.content-modal {
     overflow: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
-.products-in-modal p{
+.content-modal p{
     font-size: 18px
 }
 
@@ -53,4 +53,26 @@
 .btn:hover{
     cursor: pointer;
     transform: scale(1.05)
+}
+
+.edit-modal{
+        width: 450px;
+        height: 250px;
+
+        top: 100px;
+        padding: 20px;
+        background-color: rgba(0, 0, 0);
+        color: #eee;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: fixed;
+        z-index: 111
+}
+
+.content-edit-modal{
+    display: flex;
+}
+.content-edit-modal :first-child{
+    padding: 0 15px;
 }
