styling Modal.css

--- a/src/pages/shoppingList/Modal.css
+++ b/src/pages/shoppingList/Modal.css
@@ -38,6 +38,10 @@
 
 .btns{
     padding-top: 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .btn {
@@ -48,9 +52,20 @@
     border-radius: 5px;
     background-color: #F2E3D5;
     transition: 0.1s ease-in ;
+
+}
+.btns img {
+    background-color: #fff;
+    height: 28px;
+    transition: 0.1s ease-in ;
+    margin-top: 15px;
 }
 
 .btn:hover{
+    cursor: pointer;
+    transform: scale(1.05)
+}
+.btns img:hover {
     cursor: pointer;
     transform: scale(1.05)
 }
