--- a/src/pages/cook/meals/Meal.css
+++ b/src/pages/cook/meals/Meal.css
@@ -20,8 +20,13 @@
 }
 
 .arrow-back {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2
+    /* grid-column: 1 / 2;
+    grid-row: 1 / 2 */
+    transition: ease-in-out 0.2s
+}
+.arrow-back:hover{
+    cursor: pointer;
+    transform: scale(1.15);
 }
 
 .meal-title {
