Create new firestore database 'breakfast' and create MealsContext

--- a/src/pages/cook/meals/Meal.css
+++ b/src/pages/cook/meals/Meal.css
@@ -57,8 +57,7 @@ color: #f3f4e6
     height: 40px;
     border: none;
     font-size: 17px;
-    /* background-color: #F2E3D5; */
-    background-color: bisque;
+    background-color: #F2E3D5;
     outline: none
 }
 
