Choose and add icons to Cook site

--- a/src/pages/cook/Cook.css
+++ b/src/pages/cook/Cook.css
@@ -30,8 +30,8 @@
 .cook-container img:hover{
     transform: scale(1.07)
 }
-.cook-breakfast-icon{
-    width: 90px
+.cook-icon{
+    width: 110px
 }
 
 .cook-container .type-of-meal {
