--- a/src/pages/cook/meals/mealList/MealList.css
+++ b/src/pages/cook/meals/mealList/MealList.css
@@ -2,7 +2,7 @@
 .typesOfMeals-header {
     /* background-color: #F2E3D5; */
     background-color: #1e3e3e;
-    margin: 0 auto;
+    margin: 20px auto 0;
     display: flex;
     justify-content: center;
     border-radius: 5px;
@@ -42,4 +42,19 @@
 .typesOfMeals-container button:hover{
     cursor: pointer;
     transform: scale(1.04)
+}
+
+
+.emptyList {
+    font-size: 22px;
+    color: #f3f4e6;
+    background-color: #1e3e3e;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.emptyList p{
+    margin: 7px 0
 }
