--- a/src/pages/cook/meals/mealList/MealList.css
+++ b/src/pages/cook/meals/mealList/MealList.css
@@ -1,16 +1,22 @@
 
 .typesOfMeals-header {
-    /* background-color: #F2E3D5; */
-    background-color: #1e3e3e;
     margin: 20px auto 0;
     display: flex;
     justify-content: center;
     border-radius: 5px;
 }
+.typesOfMeals-empty-header{
+    display: flex;
+    justify-content: center;
+}
+
+.typesOfMeals-empty-header img{
+    /* width: 350px; */
+    width: 58%;
+}
 
 .typesOfMeals-header img{
     width: 150px;
-   
 }
 
 
@@ -46,15 +52,13 @@
 
 
 .emptyList {
-    font-size: 22px;
+    font-size: 24px;
     color: #f3f4e6;
-    background-color: #1e3e3e;
-    padding: 30px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 .emptyList p{
-    margin: 7px 0
+    margin: 2px 0
 }
