--- a/src/pages/shoppingList/ShoppingList.css
+++ b/src/pages/shoppingList/ShoppingList.css
@@ -1,13 +1,17 @@
 .shoppingList-container{
     background-color: #F28DB2;
+    min-height: 90vh;
     /* background-color: #D96690; */
     /* background-color: rgba(0, 0, 0, 0.6); */
+    box-sizing: border-box;
 }
 
 .shoppingList{
-    width: 500px;
+    width: 100%;
     margin: 0 auto;
-    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
