--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,6 @@
 .navbar{
     background-color: #000;
     padding: 1.25rem 2.5rem;
-
 }
 
 .sticky{
@@ -9,7 +8,7 @@
     padding: 1.25rem 2.5rem;
     position:fixed;
     top: 0;
-    width: 100%
+    width: 100%;
 }
 
 .navbar nav {
