--- a/src/pages/cook/meals/mealList/MealList.css
+++ b/src/pages/cook/meals/mealList/MealList.css
@@ -1,64 +1,66 @@
-
 .typesOfMeals-header {
-    margin: 20px auto 0;
-    display: flex;
-    justify-content: center;
-    border-radius: 5px;
+  margin: 20px auto 0;
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
 }
-.typesOfMeals-empty-header{
-    display: flex;
-    justify-content: center;
-}
-
-.typesOfMeals-empty-header img{
-    /* width: 350px; */
-    width: 58%;
+.typesOfMeals-empty-header {
+  display: flex;
+  justify-content: center;
 }
 
-.typesOfMeals-header img{
-    width: 150px;
+.typesOfMeals-empty-header img {
+  /* width: 350px; */
+  width: 58%;
 }
 
+.typesOfMeals-header img {
+  width: 150px;
+}
 
 .typesOfMeals-list {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 10px;
-    margin: 4px 0;
-    padding: 5px 15px;
-    background-color: #f2e3d5;
-    transition: ease-in-out .2s
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10px;
+  margin: 4px 0;
+  padding: 5px 15px;
+  background-color: #f2e3d5;
+  transition: ease-in-out 0.2s;
 }
 
-.typesOfMeals-container button{
-    position: fixed;
-    bottom: 5%;
-    left: 47%;
-    background: linear-gradient(90deg, rgba(0, 7, 36, 1) 0%, rgba(9, 55, 121, 1) 75%, rgba(0, 92, 255, 1) 100%);
-    color: #fff;
-    margin: 10px;
-    padding: 10px 15px;
-    border-radius: 10px;
-    border: none;
-    font-size: 18px;
-    transition: ease .2s
+.typesOfMeals-container button {
+  position: fixed;
+  bottom: 5%;
+  left: 47%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 7, 36, 1) 0%,
+    rgba(9, 55, 121, 1) 75%,
+    rgba(0, 92, 255, 1) 100%
+  );
+  color: #fff;
+  margin: 10px;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: none;
+  font-size: 18px;
+  transition: ease 0.2s;
 }
 
-.typesOfMeals-container button:hover{
-    cursor: pointer;
-    transform: scale(1.04)
+.typesOfMeals-container button:hover {
+  cursor: pointer;
+  transform: scale(1.04);
 }
-
 
 .emptyList {
-    font-size: 24px;
-    color: #f3f4e6;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+  font-size: 24px;
+  color: #f3f4e6;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-.emptyList p{
-    margin: 2px 0
+.emptyList p {
+  margin: 2px 0;
 }
