--- a/src/pages/shoppingList/ShoppingList.css
+++ b/src/pages/shoppingList/ShoppingList.css
@@ -1,36 +1,34 @@
-.shoppingList-container{
-    background-color: #F28DB2;
-    min-height: 90vh;
-    /* background-color: #D96690; */
-    /* background-color: rgba(0, 0, 0, 0.6); */
-    box-sizing: border-box;
+.shoppingList-container {
+  background-color: #f28db2;
+  min-height: 90vh;
+  /* background-color: #D96690; */
+  /* background-color: rgba(0, 0, 0, 0.6); */
+  box-sizing: border-box;
 }
 
-.shoppingList{
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.shoppingList {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-
-.shoppingList h3{
-    padding: 10px;
-    font-size: 22px;
+.shoppingList h3 {
+  padding: 10px;
+  font-size: 22px;
 }
-.shoppingList button{
-    width: 300px;
-    height: 40px;
-    border-radius: 5px;
-    border: none;
-    margin-top: 15px;
-    font-size: 20px;
-    transition: 0.1s ease-in;
+.shoppingList button {
+  width: 300px;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  margin-top: 15px;
+  font-size: 20px;
+  transition: 0.1s ease-in;
 }
-.shoppingList button:hover{
-    cursor: pointer;
-    transform: scale(1.02);
-    z-index: 0
+.shoppingList button:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+  z-index: 0;
 }
-
