--- a/src/pages/shoppingList/SingleShoppingListProduct.css
+++ b/src/pages/shoppingList/SingleShoppingListProduct.css
@@ -1,13 +1,13 @@
 .single-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 8px 25px;
-    background-color: #F2F2F2;
-    margin: 10px 0;
-    border-radius: 5px;
-    width: 500px;
-    transition: all .05s ease
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 25px;
+  background-color: #f2f2f2;
+  margin: 10px 0;
+  border-radius: 5px;
+  width: 500px;
+  transition: all 0.05s ease;
 }
 
 /* .single-item.inBag{
@@ -15,53 +15,53 @@
 } */
 
 .single-item:hover {
-    cursor: pointer;
-    background-color: #e1e1e1;
-    transform: scale(1.01);
+  cursor: pointer;
+  background-color: #e1e1e1;
+  transform: scale(1.01);
 }
 
 .single-item p {
-    font-size: 17px;
+  font-size: 17px;
 }
 
 .single-item .icons img {
-    margin-left: 25px;
-    transition: 0.1s ease-in;
+  margin-left: 25px;
+  transition: 0.1s ease-in;
 }
 
 .single-item .icons img:hover {
-    cursor: pointer;
-    transform: scale(1.2);
+  cursor: pointer;
+  transform: scale(1.2);
 }
 
 .single-item .form-edit {
-    display: flex;
+  display: flex;
 }
 
 .single-item .form-edit img {
-    transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
 }
 
 .single-item .form-edit img:hover {
-    cursor: pointer;
-    transform: scale(1.2);
+  cursor: pointer;
+  transform: scale(1.2);
 }
 
 .single-item-container {
-    width: 580px;
-    display: flex;
-    justify-content: space-between;
+  width: 580px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.single-item-container .send-img{
-    width: 53px;
-    height: 43px;
-    margin: auto 0;
-    background-color: #F2F2F2;
-    border-radius: 5px;
-    transition: all .2s ease
+.single-item-container .send-img {
+  width: 53px;
+  height: 43px;
+  margin: auto 0;
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  transition: all 0.2s ease;
 }
-.single-item-container .send-img:hover{
-    cursor: pointer;
-    transform: scale(1.2);
+.single-item-container .send-img:hover {
+  cursor: pointer;
+  transform: scale(1.2);
 }
