--- a/src/pages/shoppingList/components/Modals.css
+++ b/src/pages/shoppingList/components/Modals.css
@@ -1,93 +1,92 @@
 .modal-container {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
-    position: fixed;
-    display: flex;
-    justify-content: center; 
-    z-index:10
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  z-index: 10;
 }
 
 .modal {
-    width: 400px;
-    min-height: 200px;
-    max-height: 300px;
-    margin-top: 100px;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #eee;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  width: 400px;
+  min-height: 200px;
+  max-height: 300px;
+  margin-top: 100px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #eee;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .modal-title {
-    padding-bottom: 20px;
-    font-size: 21px;
+  padding-bottom: 20px;
+  font-size: 21px;
 }
 
 .content-modal {
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
-.content-modal p{
-    font-size: 18px
+.content-modal p {
+  font-size: 18px;
 }
 
-.btns{
-    padding-top: 20px;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.btns {
+  padding-top: 20px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .btn {
-    width: 120px;
-    height: 28px;
-    margin: 0 20px;
-    font-size: 17px;
-    border-radius: 5px;
-    background-color: #F2E3D5;
-    transition: 0.1s ease-in ;
-
+  width: 120px;
+  height: 28px;
+  margin: 0 20px;
+  font-size: 17px;
+  border-radius: 5px;
+  background-color: #f2e3d5;
+  transition: 0.1s ease-in;
 }
 .btns img {
-    background-color: #fff;
-    height: 28px;
-    transition: 0.1s ease-in ;
-    margin-top: 15px;
+  background-color: #fff;
+  height: 28px;
+  transition: 0.1s ease-in;
+  margin-top: 15px;
 }
 
-.btn:hover{
-    cursor: pointer;
-    transform: scale(1.05)
+.btn:hover {
+  cursor: pointer;
+  transform: scale(1.05);
 }
 .btns img:hover {
-    cursor: pointer;
-    transform: scale(1.05)
+  cursor: pointer;
+  transform: scale(1.05);
 }
 
-.edit-modal{
-        width: 450px;
-        height: 250px;
+.edit-modal {
+  width: 450px;
+  height: 250px;
 
-        top: 100px;
-        padding: 20px;
-        background-color: rgba(0, 0, 0);
-        color: #eee;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        position: fixed;
-        z-index: 111
+  top: 100px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0);
+  color: #eee;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 111;
 }
 
-.content-edit-modal{
-    display: flex;
+.content-edit-modal {
+  display: flex;
 }
-.content-edit-modal :first-child{
-    padding: 0 15px;
+.content-edit-modal :first-child {
+  padding: 0 15px;
 }
