--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,69 +1,153 @@
-.navbar{
-    background-color: #000;
-    padding: 1.25rem 2.5rem;
-}
 
-.sticky{
+.navigation {
     background-color: #000;
-    padding: 1.25rem 2.5rem;
-    position:fixed;
+    padding: 1.25rem 4%;
+    transition: 0.4s ease;
+  }
+  
+  .navbar {
+    position: relative;
+  }
+  
+  .sticky {
+    position: fixed;
     top: 0;
     width: 100%;
-}
-
-.navbar nav {
+    padding: 0.8rem 2.5rem;
+  }
+  
+  .navigation nav {
     display: flex;
     justify-content: space-between;
-    align-items: center;  
-}
-.navbar nav .logo{
-    color: #ccc
-}
-.navbar nav .logo:hover{
-    color: #eee
-}
-
-.navbar nav a {
+    align-items: center;
+  }
+  
+  .navigation nav .logo {
+    color: #ccc;
     text-decoration: none;
-    color: #777;
+    font-size: 1.3rem;
+    letter-spacing: 1.5px;
     margin: 0 1rem;
-    font-size: 20px;
-}
-
-.sticky nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;  
-}
-.sticky nav .logo{
-    color: #ccc
-}
-
-.sticky nav a {
+  }
+  
+  .navbar nav .logo:hover {
+    color: #eee;
+  }
+  
+  .options a {
     text-decoration: none;
+    font-size: 1.3rem;
     color: #777;
-    margin: 0 1rem;
-    font-size: 20px;
-}
-
-.navbar nav a:hover{
-    color: #fff
-}
-.is-active{
+    margin: 0 0.8rem;
+    letter-spacing: 1.7px;
+  }
+  
+  .sticky nav .logo {
+    color: #ccc;
+  }
+  
+  .navbar nav a:hover {
+    color: #fff;
+  }
+  
+  .is-active {
     color: pink;
-}
-
-@media (max-width:770px) {
-    .navbar{
-        padding: 1.25rem 0.7rem;
+  }
+  
+  @media (max-width: 770px) {
+    .navbar {
+      padding: 1.25rem 1.5%;
     }
-    .navbar nav a {
-        margin: 0 0.5rem;
+  
+    .navigation nav .logo {
+      letter-spacing: 0.8px;
     }
-    .sticky  {
-        padding: 1.25rem 0.7rem;
+  
+    .options a {
+      margin: 0 0.4rem;
+      letter-spacing: 0.4px;
+      font-size: 1.2rem;
     }
-     .sticky nav a {
-        margin: 0 0.5rem;
+  
+    .sticky {
+      padding: 0.8rem 1.5%;
     }
-}
+  
+    .sticky nav a {
+      /* margin: 0 6.4px */
+    }
+  }
+  
+  @media (max-width: 600px) {
+    .options {
+      margin: 0 0.5rem;
+      background: #321;
+      position: absolute;
+      top: 65px;
+      right: -80%;
+      min-width: 75%;
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      opacity: 0;
+      transition: all 0.5s cubic-bezier(0.62, 0.04, 0.3, 1.56);
+      transition-delay: 100ms;
+    }
+  
+    .options a {
+      font-size: 1.3rem;
+      letter-spacing: 1.7px;
+      line-height: 1.6;
+    }
+  
+    .show {
+      opacity: 1;
+      right: -11px;
+    }
+  
+    .hamburger-icon {
+      position: absolute;
+      height: 60px;
+      width: 60px;
+      /* top: 10%; */
+      right: 3%;
+      z-index: 1000;
+      cursor: pointer;
+      border-radius: 50%;
+      transition: all 0.2s ease-in-out;
+      background: rgba(255, 255, 255, 0.2);
+    }
+  
+    .icon-1,
+    .icon-2,
+    .icon-3 {
+      position: absolute;
+      right: 25%;
+      top: 50%;
+      width: 32px;
+      height: 3px;
+      background-color: white;
+      transition: all 400ms cubic-bezier(0.84, 0.06, 0.52, 1.8);
+    }
+  
+    .icon-1 {
+      transform: translateY(-8px);
+    }
+  
+    .icon-3 {
+      transform: translateY(8px);
+    }
+  
+    .icon-a {
+      transform: rotate(45deg);
+    }
+  
+    .icon-b {
+      opacity: 0;
+    }
+  
+    .icon-c {
+      transform: rotate(-45deg);
+    }
+  }
+  
