--- a/src/pages/stock/Stock.css
+++ b/src/pages/stock/Stock.css
@@ -2,32 +2,82 @@
 
 .stock-container {
   background-color: #026773;
-  min-height: 90vh;
 }
 
-.stock .add-icon {
+.add-icon {
   width: 60px;
   transition: 0.2s ease-in-out;
   position: absolute;
   left: 100px;
   top: 70px;
 }
-.stock-container .add-icon:hover {
+.add-icon:hover {
   cursor: pointer;
   transform: scale(1.2);
 }
-.stock {
+.inside-container {
+  position: relative;
+  width: 90%;
   max-width: 600px;
   margin: 0 auto;
 }
 
 /* ProductsList component  */
 
-.title {
+.product-list {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 8px;
-  font-size: 20px;
-  color: #f3f4e6;
+  margin: 8px 0;
+  padding: 8px;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
+  border-radius: 5px;
+  background-color: #f2e3d5;
+}
+
+.product-list:hover {
+  cursor: pointer;
+  background-color: #e1d2c4;
+}
+
+.product-list .first-div {
+  display: flex;
+  justify-content: space-between;
+  /* width: 50%; */
+  flex-wrap: nowrap;
+}
+
+
+.product-list .second-div {
+  display: flex;
+  align-items: center;
+}
+
+.product-list div label input {
+  width: 60px;
+  height: 30px;
+  margin-left: 5px;
+  border: 0;
+  outline: #aaa 1px solid;
+  background-color: #f2e3d5;
+}
+
+.product-list .img-add-to-cart {
+  margin-left: 10px;
+  
+}
+.product-list .img-add-to-cart:hover {
+  outline: #777 1px solid;
+ 
+}
+
+
+
+
+@media (max-width: 600px){
+  .product-list span:hover {
+    display: none;
+  
+  }
 }
