--- a/src/components/createProduct/CreateProduct.css
+++ b/src/components/createProduct/CreateProduct.css
@@ -8,8 +8,9 @@
 
 .form-container {
   background-color: rgba(0, 0, 0, 0.8);
-  width: 500px;
-  height: 300px;
+  width: 90%;
+  max-width: 500px;
+  padding: 2em;
   margin: 100px auto 0 auto;
   display: flex;
   flex-direction: column;
@@ -21,30 +22,32 @@
 .createProduct-container h3 {
   color: #ddd;
 }
-
-.form-container .form-item {
+ .form-item {
   background-color: #f2e3d5;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 30px 0 30px;
+  padding: .4em .5em;
   margin: 20px 0;
   border-radius: 5px;
-  font-size: 18px;
+  font-size: 1.1em;
+  display: flex;
+  justify-content: space-between;
 }
 
-.form-container div input {
-  height: 25px;
+.form-item input {
+  width: 100%;
+  padding: .3em 0;
+  margin-left: .2em;
   border: none;
   border-radius: 5px;
 }
-.form-container div input:focus {
+.form-item input:focus {
   outline: none;
 }
 
 .form-container button {
   background-color: #f2e3d5;
-  width: 220px;
-  height: 40px;
+  width: 90%;
+  max-width: 15em;
+  padding: .8em 0;
   border: none;
   border-radius: 5px;
   margin-top: 10px;
