--- a/src/pages/shoppingList/ShoppingList.css
+++ b/src/pages/shoppingList/ShoppingList.css
@@ -1,33 +1,31 @@
 .shoppingList-container {
   background-color: #f28db2;
   min-height: 90vh;
-  /* background-color: #D96690; */
-  /* background-color: rgba(0, 0, 0, 0.6); */
   box-sizing: border-box;
 }
 
 .shoppingList {
-  width: 100%;
+  width: 90%;
+  max-width: 580px;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding-bottom: 15px;
 }
 
 .shoppingList h3 {
   padding: 10px;
   font-size: 22px;
 }
-.shoppingList button {
-  width: 300px;
-  height: 40px;
+.btn-shopping-complete {
+  width: 60%;
+  padding: 8px 10px;
+  display: block;
   border-radius: 5px;
   border: none;
-  margin-top: 15px;
+  margin: 10px auto 0 auto;
   font-size: 20px;
   transition: 0.1s ease-in;
 }
-.shoppingList button:hover {
+.btn-shopping-complete:hover {
   cursor: pointer;
   transform: scale(1.02);
   z-index: 0;
