--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -78,44 +78,81 @@
       /* margin: 0 6.4px */
     }
   }
+
+  /* *************** */
+  /* hamburger menu */
+
   
   @media (max-width: 600px) {
     .options {
       margin: 0 0.5rem;
-      background: #321;
+      background:   #222;
       position: absolute;
       top: 65px;
-      right: -80%;
-      min-width: 75%;
+      right: -8px;
+      height: 100vh;
       z-index: 10;
-      display: flex;
-      flex-direction: column;
+      padding: 30px 0;
       opacity: 0;
-      transition: all 0.5s cubic-bezier(0.62, 0.04, 0.3, 1.56);
+      animation: slideOut .6s cubic-bezier(0.62, 0.04, 0.3, 1.56);
       transition-delay: 100ms;
     }
   
+    .inside-options {
+      display: flex;
+      flex-direction: column;
+      width: 85%;
+      margin: 0 auto;
+    }
+
+@keyframes slideIn {
+  0% {
+ opacity: 0;
+ width: 0%;
+  }
+  100% {
+ opacity: 1;
+ width: 75%
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    opacity: 1;
+    width: 75%;
+     }
+  100% {
+    opacity: 0;
+    width: 0%
+}
+}
+
     .options a {
-      font-size: 1.3rem;
+      width: 90%;
+      margin: .5rem 0;
       letter-spacing: 1.7px;
       line-height: 1.6;
+      text-transform: uppercase;
     }
   
-    .show {
+    .show-options {
+      width: 50%;
+      z-index: 10;
       opacity: 1;
-      right: -11px;
+      display: flex;
+      flex-direction: column;
+      animation: slideIn 0.6s cubic-bezier(.62,.04,.3,1.56);
+      animation-fill-mode: forwards;
     }
   
     .hamburger-icon {
       position: absolute;
       height: 60px;
       width: 60px;
-      /* top: 10%; */
       right: 3%;
       z-index: 1000;
       cursor: pointer;
       border-radius: 50%;
-      transition: all 0.2s ease-in-out;
       background: rgba(255, 255, 255, 0.2);
     }
   
