--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -94,14 +94,16 @@
       z-index: 10;
       padding: 30px 0;
       opacity: 0;
-      animation: slideOut .6s cubic-bezier(0.62, 0.04, 0.3, 1.56);
+      animation: slideOut .4s cubic-bezier(0.62, 0.04, 0.3, 1.56);
       transition-delay: 100ms;
     }
   
     .inside-options {
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
       width: 85%;
+      min-height: 180px;
       margin: 0 auto;
     }
 
@@ -129,7 +131,6 @@
 
     .options a {
       width: 90%;
-      margin: .5rem 0;
       letter-spacing: 1.7px;
       line-height: 1.6;
       text-transform: uppercase;
@@ -146,22 +147,21 @@
     }
   
     .hamburger-icon {
-      position: absolute;
-      height: 60px;
-      width: 60px;
-      right: 3%;
+      margin-right: 29px;
+      height: 25px;
+      width: 40px;
       z-index: 1000;
       cursor: pointer;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+      transition: background-color .1s ease-in-out
     }
-  
+
     .icon-1,
     .icon-2,
     .icon-3 {
       position: absolute;
-      right: 25%;
-      top: 50%;
+      right: 42px;
+      top: 47%;
       width: 32px;
       height: 3px;
       background-color: white;
