--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -91,7 +91,7 @@
       top: 65px;
       right: -8px;
       height: 100vh;
-      z-index: 10;
+      z-index: -10;
       padding: 30px 0;
       opacity: 0;
       animation: slideOut .4s cubic-bezier(0.62, 0.04, 0.3, 1.56);
@@ -122,10 +122,12 @@
   0% {
     opacity: 1;
     width: 75%;
+    z-index: 10;
      }
   100% {
     opacity: 0;
-    width: 0%
+    width: 0%;
+    z-index: 10;
 }
 }
 
