--- a/src/components/createProduct/CreateProduct.css
+++ b/src/components/createProduct/CreateProduct.css
@@ -1,9 +1,9 @@
 .createProduct-container {
   background-color: rgba(0, 0, 0, 0.7);
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: fixed;
-  z-index: 10
+  z-index: 10;
 }
 
 .form-container {
@@ -11,16 +11,20 @@
   width: 90%;
   max-width: 500px;
   padding: 2em;
-  margin: 100px auto 0 auto;
-  display: flex;
+  margin: 10% auto 0 auto;
+  border-radius: 5px;
+  margin-top: 10%;
+
+  /* display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  align-items: center; */
   position: relative;
 }
 
 .createProduct-container h3 {
   color: #ddd;
+ text-align: center;
 }
  .form-item {
   background-color: #f2e3d5;
@@ -29,7 +33,7 @@
   border-radius: 5px;
   font-size: 1.1em;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .form-item input {
@@ -50,7 +54,8 @@
   padding: .8em 0;
   border: none;
   border-radius: 5px;
-  margin-top: 10px;
+  display: block;
+  margin: 10px auto 0 auto;
   transition: 0.2s ease-in;
 }
 
