--- a/src/pages/stock/Stock.css
+++ b/src/pages/stock/Stock.css
@@ -3,11 +3,19 @@
 .stock-container {
   background-color: #026773;
 }
+.header-search-create {
+  display: flex;
+}
 
+.header-search-create a {
+  width: 60px;
+  height: 60px;
+}
 .add-icon {
   width: 60px;
+  /* height: 60px; */
   transition: 0.2s ease-in-out;
-  padding: 8px 0;
+  margin-top: 8px 
 }
 .add-icon:hover {
   cursor: pointer;
@@ -20,9 +28,6 @@
   margin: 0 auto;
 }
 
-.header-search-create {
-  display: flex;
-}
 
 /* ProductsList component  */
 
