--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -224,3 +224,9 @@
     }
   }
   
+  .fi .fi-gr {
+   font-size: 20px;
+    background-size: contain;
+background-position: 50%;
+background-repeat: no-repeat;
+  }
