--- a/src/pages/cook/Cook.css
+++ b/src/pages/cook/Cook.css
@@ -1,7 +1,7 @@
 .cook-container {
-/* border: 2px solid green; */
 background-color: darkslategray;
-/* height: 100vh; */
+/* background-color: var(--main-bg-color); */
+
 }
 
 .inside-cook {
