--- a/src/pages/cook/meals/meal/Meal.css
+++ b/src/pages/cook/meals/meal/Meal.css
@@ -20,7 +20,8 @@
   /* grid-column: 1 / 2;
     grid-row: 1 / 2 */
   transition: ease-in-out 0.2s;
-  background-color: #f3f4e6;
+  /* background-color: #f3f4e6; */
+  background-color: var(--fields-bg-color);
   border-radius: 10px;
 }
 .arrow-back:hover {
@@ -40,7 +41,7 @@
 
 .meal-search-form {
   display: flex;
-  background-color: #f2e3d5;
+  background-color: var(--fields-bg-color);
   padding: 5px;
   margin: 15px 0;
   border-radius: 80px;
@@ -55,6 +56,6 @@
   height: 40px;
   border: none;
   font-size: 17px;
-  background-color: #f2e3d5;
+  background-color: var(--fields-bg-color);
   outline: none;
 }
