--- a/src/pages/cook/meals/mealList/MealList.css
+++ b/src/pages/cook/meals/mealList/MealList.css
@@ -25,8 +25,11 @@
   border-radius: 10px;
   margin: 4px 0;
   padding: 5px 15px;
-  background-color: #f2e3d5;
+  background-color: var(--fields-bg-color);
   transition: ease-in-out 0.2s;
+}
+.typesOfMeals-list:hover{
+  background-color: var(--fields-hover-bg-color);
 }
 
 .btn-add-more-mealList{
