--- a/src/pages/shoppingList/SingleShoppingListProduct.css
+++ b/src/pages/shoppingList/SingleShoppingListProduct.css
@@ -8,20 +8,20 @@
   justify-content: space-between;
   align-items: center;
   padding: 8px 10px;
-  background-color: #f2f2f2;
+  background-color: var(--fields-bg-color);
   width: 85%;
   margin: 4px 0;
   border-radius: 5px;
   transition: all 0.05s ease;
 }
 
-/* .single-item.inBag{
-    text-decoration: line-through;
-} */
+.single-item-container:first-child{
+padding-top: 35px
+}
 
 .single-item:hover {
   cursor: pointer;
-  background-color: #e1e1e1;
+  background-color: var(--fields-hover-bg-color);
   transform: scale(1.01);
 }
 
@@ -62,13 +62,14 @@
   width: 10%;
   height: 43px;
   margin: auto 0;
-  background-color: #f2f2f2;
+  background-color: var(--fields-bg-color);
   border-radius: 5px;
   transition: all 0.2s ease;
 }
 .single-item-container .send-img:hover {
   cursor: pointer;
   transform: scale(1.2);
+  background-color: var(--fields-hover-bg-color);
 }
 
 @media (max-width: 500px ){
