--- a/src/pages/stock/Stock.css
+++ b/src/pages/stock/Stock.css
@@ -1,7 +1,8 @@
 /* colors:  #012E40 #024959 #026773 #3CA6A6 #F2E3D5 */
 
 .stock-container {
-  background-color: #026773;
+  /* background-color: #026773; */
+  background-color: var(--main-bg-color);
 }
 .header-search-create {
   display: flex;
@@ -40,12 +41,12 @@
   border-top: 1px solid #999;
   border-bottom: 1px solid #999;
   border-radius: 5px;
-  background-color: #f2e3d5;
+  background-color: var(--fields-bg-color);
 }
 
 .product-list:hover {
   cursor: pointer;
-  background-color: #e1d2c4;
+  background-color: var(--fields-hover-bg-color);
 }
 
 .product-list .first-div {
@@ -67,7 +68,7 @@
   margin-left: 5px;
   border: 0;
   outline: #aaa 1px solid;
-  background-color: #f2e3d5;
+  background-color: var(--fields-bg-color);
 }
 
 .product-list .img-add-to-cart {
@@ -78,8 +79,6 @@
   outline: #777 1px solid;
  
 }
-
-
 
 
 @media (max-width: 600px){
